[package]
name = "boxcars-py"
version = "0.1.15"
authors = ["Ivan Malison <IvanMalison@gmail.com>", "Justus K <justus.k@protonmail.com>", "Matthew Mage <sciguymjm@gmail.com>"]
edition = "2018"

[dependencies]
boxcars = "0.9.9"
boxcars-frames = { git = "https://github.com/CUBTeamRocket/boxcar-frames.git" }
numpy = "0.18.0"
serde_json = "1.0.52"

[dependencies.pyo3]
version = "0.18.2"
features = ["extension-module"]

[lib]
name = "boxcars_py"
crate-type = ["cdylib"]
