[tool.poetry]
name = "boxcars_py"
version = "0.1.14"
description = "Python bindings for the Rocket League replay parser boxcars."
authors = ["Justus K <justus.k@pm.me>", "Matthew Mage <sciguymjm@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/SaltieRL/BoxcarWrapper"

packages = [
         { include = "boxcars_py ", from = "boxcars_py"}
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.5"
wheel = "*"
pytest-runner = "*"
pytest-benchmark = "3.2.3"
maturin = "^0.14.2"

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"
